# pii-masker

./: .gitignore  README.md  pyproject.toml
backend/: helper.py  main.py  requirements.txt
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: FileUpload.tsx  MaskedImageResult.tsx  PIIAnalysisResult.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: usePIIMutations.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Index.tsx  PIIShield.tsx
