[project]
name = "pii-masker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "blis==1.3.0",
    "catalogue==2.0.10",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "cloudpathlib==0.21.1",
    "colorama==0.4.6",
    "confection==0.1.5",
    "cymem==2.0.11",
    "dotenv>=0.9.9",
    "easyocr==1.7.2",
    "en-core-web-sm",
    "fastapi==0.116.1",
    "filelock==3.18.0",
    "fsspec==2025.7.0",
    "h11==0.16.0",
    "idna==3.10",
    "imageio==2.37.0",
    "jinja2==3.1.6",
    "langcodes==3.5.0",
    "language-data==1.3.0",
    "lazy-loader==0.4",
    "marisa-trie==1.2.1",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "murmurhash==1.0.13",
    "networkx==3.5",
    "ninja==1.11.1.4",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "opencv-python-headless==4.12.0.88",
    "packaging==25.0",
    "pillow==11.3.0",
    "pip==25.1.1",
    "preshed==3.0.10",
    "pyclipper==1.3.0.post6",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pygments==2.19.2",
    "python-bidi==0.6.6",
    "python-multipart>=0.0.20",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "rich==14.0.0",
    "scikit-image==0.25.2",
    "scipy==1.16.0",
    "setuptools==80.9.0",
    "shapely==2.1.1",
    "shellingham==1.5.4",
    "smart-open==7.3.0.post1",
    "sniffio==1.3.1",
    "spacy==3.8.7",
    "spacy-legacy==3.0.12",
    "spacy-loggers==1.0.5",
    "srsly==2.5.1",
    "starlette==0.47.1",
    "sympy==1.14.0",
    "thinc==8.3.6",
    "tifffile==2025.6.11",
    "torch==2.7.1",
    "torchvision==0.22.1",
    "tqdm==4.67.1",
    "typer==0.16.0",
    "typing-extensions==4.14.1",
    "typing-inspection==0.4.1",
    "urllib3==2.5.0",
    "uv==0.8.0",
    "uvicorn==0.35.0",
    "wasabi==1.1.3",
    "weasel==0.4.1",
    "wrapt==1.17.2",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
